# ltl

./: README.md  dune  dune-project  ltl.opam
src/: eval.ml  eval.mli  formulae.ml  formulae.mli  ltl.ml  ltl.mli
