opam-version: "2.0"
name: "ltl"
version: "0.1"
synopsis: "Linear temporal logic"
maintainer: "Matthew Kukla <matt.kukla@yandex.ru>"
authors: "Matthew Kukla <matt.kukla@yandex.ru>"
bug-reports: "Matthew Kukla <matt.kukla@yandex.ru>"
license: "GPL-3.0"
homepage: "https://mkukla.net/doc/ltl/"
depends: ["ocaml" "ocamlbuild"]
build: [["dune" "build" "-p" name "-j" jobs "@install" ]]
